# russs

./: Cargo.toml  README.md
src/: main.rs  sss.rs  ui.glade  ui.rs
tests/data/: testInput  testInput-differingFilename.shard  testInput-differingPrime.shard  testInput-differingVersion.shard  testInput-invalidFilename.shard
