[package]
name = "russs"
version = "0.1.0"
authors = ["Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.gtk]
version = "0.7.0"

[dependencies.gio]
version = "0.7.0"

[dependencies.gdk]
version = "0.11.0"
